# hyper-fusion-xc

./: README.md
board/: .gitignore  10029449-111RLF.kicad_sym  2026-01-30_06-52-17.kicad_sym  2086581201.kicad_sym  467650301.kicad_sym  ESP32-C3-WROOM-02-N4.kicad_sym  HyperFusionXC.FCStd  HyperFusionXC.kicad_pcb  HyperFusionXC.kicad_prl  HyperFusionXC.kicad_pro  HyperFusionXC.kicad_sch  HyperFusionXC.pcb  HyperFusionXC.sch  Library.kicad_sym  NAU88C22YG.kicad_sym  PTS526SM20SMTR21_LFS.kicad_sym  QFN50P500X500X80-33N.kicad_mod  SJ-3524-SMT.lib  SS-53000-001.kicad_sym  TL3336AF160Q.kicad_sym  UJ20-C-H-G-SMT-2-P16-TR.kicad_sym  WA-SMSI_9774XXX151.kicad_sym
firmware/: main.c
firmware/esp32s3/main/: CMakeLists.txt  audiodev.c  audiodev.h  dac.c  dac.h  emutimer.c  emutimer.h  fpga.c  fpga.h  i2s.c  i2s.h  idf_component.yml  llspi.c  llspi.h  main.c  spi_internal.h  spitest.c  spitest.h  tests.c
firmware/esp32s3/main/bluemsx/: AY8910.c  AY8910.h  ArchTimer.h  AudioMixer.c  AudioMixer.h  Board.c  Board.h  Fmopl.c  Fmopl.h  IoPort.c  IoPort.h  MidiIO.c  Moonsound.cpp  Moonsound.h  MsxAudio.cpp  MsxAudio.h  MsxTypes.h  OpenMsxY8950.cpp  OpenMsxY8950.h  OpenMsxY8950Adpcm.cpp  OpenMsxY8950Adpcm.h  OpenMsxYM2413.cpp  OpenMsxYM2413.h  OpenMsxYM2413_2.cpp  OpenMsxYM2413_2.h  OpenMsxYMF262.cpp  OpenMsxYMF262.h  OpenMsxYMF278.cpp  OpenMsxYMF278.h  Y8950.c  Y8950.h  YM2413.cpp  YM2413.h  Ymdeltat.c  Ymdeltat.h  fifo.c  fifo.h
firmware/esp32s3/main/openmsx/: FixedPoint.hh  YM2413Burczynski.cc  YM2413Burczynski.hh  YM2413Core.hh  cstd.hh  one_of.hh  ranges.hh  unreachable.hh
(+118 files in other folders)
